Fix image overflow

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -10,7 +10,7 @@
 }
 
 .markdown img {
-  @apply mx-auto max-w-xl;
+  @apply mx-auto w-full max-w-xl;
 }
 
 .markdown h2 {
